# llm-html-processor

./: .gitignore  LICENSE  README.md  pyproject.toml
examples/: basic_usage.py
llm_html_processor/: models.py
llm_html_processor/core/: extractor.py  injector.py
llm_html_processor/llm/: errors.py  retry.py
src/: __init__.py  __main__.py  cli.py  models.py  pipeline.py
src/core/: errors.py  extractor.py  injector.py
src/llm/: __init__.py  base.py  cache.py  factory.py  gemini_client.py  local_client.py  openai_client.py
src/utils/: __init__.py  logging.py
src/web/: __init__.py  app.py  forms.py  models.py  utils.py
src/web/routes/: __init__.py  api.py  auth.py  main.py
src/web/templates/: dashboard.html  index.html  layout.html  plans.html  process.html  result.html
src/web/templates/auth/: login.html  profile.html  register.html
